[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "oex"
version = "0.4.1"
description = "Country-scale OSM and Overture Maps vector datasets, exported to GIS formats and optionally published to HDX."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Kshitij Raj Sharma", email = "krschap@proton.me" }]
keywords = [
    "overture",
    "openstreetmap",
    "osm",
    "hdx",
    "geoparquet",
    "duckdb",
    "humanitarian",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "babel>=2.18.0",
    "boto3>=1.43.6",
    "duckdb>=1.5.2",
    "hdx-python-api>=6.6.7",
    "omegaconf>=2.3.0",
    "psutil>=7.0.0",
    "pycountry>=26.2.16",
    "pyproj>=3.7.2",
    "quackosm>=0.17.1",
    "requests>=2.32.0",
    "shapely>=2.1.0",
    "tqdm>=4.67.0",
    "typer>=0.15.0",
    "unidecode>=1.4.0",
]

[project.scripts]
oex-cli = "oex.cli:app"

[project.urls]
Homepage = "https://github.com/osgeonepal/oex"
Documentation = "https://osgeonepal.github.io/oex"
Repository = "https://github.com/osgeonepal/oex"
Issues = "https://github.com/osgeonepal/oex/issues"
Changelog = "https://github.com/osgeonepal/oex/blob/main/CHANGELOG.md"

[tool.uv.build-backend]
source-include = ["tests/**", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# typer's idiomatic API uses Option(...) / Argument(...) in default positions.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=oex",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
xfail_strict = true
markers = [
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
source = ["src/oex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.1"
version_files = ["pyproject.toml:^version", "src/oex/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
pre_bump_hooks = ["uv lock --quiet", "git add uv.lock"]

[dependency-groups]
dev = [
    "commitizen>=4.13.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
    "ty>=0.0.34",
]
docs = ["mkdocstrings-python>=2.0.0", "zensical>=0.0.39"]
